# intoxi-cate

./: .gitignore  config.yaml  dataURLs.json  detox-pre.yml  intoxi-cate.yaml  main.py  pyproject.toml  readme.md  snakefile  toxo_env.yml
.github/workflows/: conda-install.yml  test-build.yml
fixtures/Database/Toxins/Neogastropoda/Conidae/Conus_ebraeus/: Toxins_database_Conus_ebraeus.fasta
fixtures/Database/Toxins/Neogastropoda/Conidae/Profundiconus/: Toxins_Database_profundiconus.fasta
lib/: __init__.py  assemble_transcriptome.py  blast.py  config.py  generate_peptides.py  hmmer.py  output.py  signalp.py  tmbed.py  tmbed_wrapper.py  toxins_peptides.py  transcriptome.py  utils.py
src/intoxi_cate/: cli.py
src/intoxi_cate/lib/: __init__.py  _config.py  blast.py  generate_peptides.py  hmmer.py  output.py  tmbed_wrapper.py  toxins_peptides.py  transcriptome.py  utils.py
